--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -672,6 +672,49 @@ progress {
   color: #6c757d;
 }
 
+section video {
+  position: absolute;
+  top: 38%;
+  left: 50%;
+  min-width: 100%;
+  max-height: 100%;
+  width: auto;
+  height: auto;
+  z-index: 0;
+  -ms-transform: translateX(-50%) translateY(-50%);
+  -moz-transform: translateX(-50%) translateY(-50%);
+  -webkit-transform: translateX(-50%) translateY(-50%);
+  transform: translateX(-50%) translateY(-50%);
+}
+
+
+section .overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background-color: black;
+  opacity: 0.5;
+  z-index: 1;
+} 
+
+
+
+
+/* .container_video { position:relative; }
+.container_video video {
+    position:relative;
+    z-index:0;
+}
+.overlay {
+    position:absolute;
+    top:0;
+    left:0;
+    z-index:1;
+} */
+
+
 .container,
 .container-fluid,
 .container-xxl,
