--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -672,7 +672,7 @@ progress {
   color: #6c757d;
 }
 
-section video {
+  video {
   position: absolute;
   top: 40%;
   left: 50%;
@@ -685,9 +685,18 @@ section video {
   -moz-transform: translateX(-50%) translateY(-50%);
   -webkit-transform: translateX(-50%) translateY(-50%);
   transform: translateX(-50%) translateY(-50%);
+  overflow: hidden;
 }
 
-section .overlay {
+.video-container {
+  position: relative;
+  /* padding-bottom: 56.25%;
+  padding-top: 35px; */
+  height: 100%;
+  overflow: hidden;
+}
+
+/* section .overlay {
   position: absolute;
   top: 0;
   left: 0;
@@ -696,7 +705,7 @@ section .overlay {
   background-color: black;
   opacity: 0.5;
   z-index: 1;
-} 
+}  */
 
 
 
@@ -38665,13 +38674,13 @@ body {
   flex-direction: column;
 }
 
-#myVideo {
+/* #myVideo {
   position: relative;
   right: 0;
   bottom: 0;
   max-width: 100%;
   max-height: 100%;
-}
+} */
 
 .content-wrapper,
 footer {
